--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,10 @@
   },
   "dependencies": {
     "axios": "^1.7.4",
+    "formidable": "^3.5.1",
+    "mammoth": "^1.8.0",
     "next": "14.2.5",
+    "pdf-parse": "^1.1.1",
     "react": "^18",
     "react-dom": "^18"
   },
