--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "react-icons": "^5.3.0",
     "axios": "^1.7.4",
     "next": "14.2.5",
     "react": "^18",
