--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "formidable": "^3.5.1",
     "mammoth": "^1.8.0",
     "chart.js": "^4.4.4",
+    "date-fns": "^3.6.0",
     "next": "14.2.5",
     "pdf-parse": "^1.1.1",
     "react": "^18",
