--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -27,6 +27,6 @@
     "**/*.tsx",
     ".next/types/**/*.ts",
     "src/pages/page.jsx"
-, "src/pages/_app.tsx"  ],
+, "src/pages/_app.tsx", "src/pages/api/student/[student].js"  ],
   "exclude": ["node_modules"]
 }
