--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,7 +20,7 @@
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
-    "uuid": "^10.0.0"
+    "uuid": "^10.0.0",
     "recharts": "^2.12.7"
   },
   "devDependencies": {
