--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,21 +10,23 @@
   },
   "dependencies": {
     "axios": "^1.7.4",
-    "formidable": "^3.5.1",
-    "mammoth": "^1.8.0",
     "chart.js": "^4.4.4",
     "date-fns": "^3.6.0",
+    "formidable": "^3.5.1",
+    "mammoth": "^1.8.0",
     "next": "14.2.5",
     "pdf-parse": "^1.1.1",
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
-    "react-icons": "^5.3.0"
+    "react-icons": "^5.3.0",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/uuid": "^10.0.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
     "postcss": "^8",
