--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,12 +10,13 @@
   },
   "dependencies": {
     "axios": "^1.7.4",
-    "formidable": "^3.5.1",
-    "mammoth": "^1.8.0",
     "chart.js": "^4.4.4",
     "date-fns": "^3.6.0",
-    "next": "14.2.5",
+    "formidable": "^3.5.1",
+    "mammoth": "^1.8.0",
+    "next": "^14.2.15",
     "pdf-parse": "^1.1.1",
+    "pdfjs-dist": "^2.10.377",
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
