--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "pdf-parse": "^1.1.1",
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
+    "pdfjs-dist": "^2.10.377",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
     "recharts": "^2.12.7"
